--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -45,7 +45,7 @@
 	<div class="menu-box">
 
 		<div class="btn-group corners">
-			<button class="btn btn-lg btn-primary btn-block corners" type="button">Scharmützel</button>
+			<button class="btn btn-lg btn-primary btn-block corners" type="button" onclick="startPVPC()">Scharmützel</button>
 			<button type="button"
 				class="btn btn-lg btn-primary btn-block dropdown-toggle corners"
 				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehrspieler</button>
