--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -203,6 +203,15 @@
 					</div>
 				</div>
 			</div>
+						<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/atlantis1.png" alt="...">
+					<div class="caption">
+						<h3>Endor</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
 		</div>
 
 
